--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,26 @@
+Build: 1.14.2-26.0.16 - Mon Jun 10 22:14:58 GMT 2019
+	tterrag:
+		Add IContainerFactory for reading custom container data on the client
+
+=========
+Build: 1.14.2-26.0.15 - Mon Jun 10 21:04:07 GMT 2019
+	lex:
+		Fix Fishing and Mineshaft Minecarts loot tables erroring. #5785 Fix
+		Client block breaking speed not matching the server. #5790 Fix Village
+		Siege event location, and MC-154328 preventing Sieges starting. #5800
+		Fix EntityJoinWorldEvent not firing on client, or some server code
+		paths. #5786
+
+=========
+Build: 1.14.2-26.0.14 - Mon Jun 10 04:13:40 GMT 2019
+	tterrag:
+		Adjust NetworkEvent#enqueueWork to match vanilla logic
+		In singleplayer our packet work could get delayed until the next tick, 
+		breaking the expectation of packet read order. Fixes that using 
+		NetworkHooks.openGui would result in missing inventory data on the
+		client
+
+=========
 Build: 1.14.2-26.0.13 - Sun Jun 09 18:19:15 GMT 2019
 	lex:
 		Fix gameDir argument error on dedicated server.
