--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,152 @@
+Build: 1.14.2-26.0.63 - Sun Jun 23 23:55:05 GMT 2019
+	cpw:
+		Fix too many registries being sent from server to client
+		Signed-off-by: cpw <cpw+github@weeksfamily.ca>
+
+=========
+Build: 1.14.2-26.0.62 - Sun Jun 23 22:36:43 GMT 2019
+	tterrag:
+		Remove OnlyIn on TagCollection#getOwningTags
+		Fixes Block#getTags crashing on servers
+
+=========
+Build: 1.14.2-26.0.61 - Sun Jun 23 20:01:37 GMT 2019
+	cpw:
+		Reorganize sided event dispatch slightly. Dispatch model and
+		entityrenderer functions at more appropriate times.
+		Signed-off-by: cpw <cpw+github@weeksfamily.ca>
+
+=========
+Build: 1.14.2-26.0.60 - Sun Jun 23 18:52:15 GMT 2019
+	jojohostert:
+		Add mod failure identification
+
+	cpw:
+		Tweak for lowercase handling.
+		Signed-off-by: cpw <cpw+github@weeksfamily.ca>
+
+=========
+Build: 1.14.2-26.0.57 - Sun Jun 23 18:37:19 GMT 2019
+	cpw:
+		Fix crash when crashing during modloading. Fix GuiModList being weird.
+		Signed-off-by: cpw <cpw+github@weeksfamily.ca>
+
+=========
+Build: 1.14.2-26.0.56 - Sun Jun 23 16:27:18 GMT 2019
+	cpw:
+		Process the main modloading work on the async thread, but still do
+		deferred work on the main thread by passing in the executor.
+		Signed-off-by: cpw <cpw+github@weeksfamily.ca>
+
+=========
+Build: 1.14.2-26.0.55 - Sun Jun 23 06:57:15 GMT 2019
+	tterrag:
+		Clean up config comments, make comment array nonnull
+
+=========
+Build: 1.14.2-26.0.54 - Sun Jun 23 06:18:04 GMT 2019
+	tterrag:
+		Automatically add range to config comments
+
+	tterrag:
+		Fix forge event bus never starting up
+
+=========
+Build: 1.14.2-26.0.52 - Sun Jun 23 03:39:20 GMT 2019
+	cpw:
+		First pass of adding text to the loading progress UI. It deliberately
+		uses the very primitive STB generated font, so can only render basic
+		ASCII text, and also only renders pre-defined strings, as translations
+		aren't available either.
+		Signed-off-by: cpw <cpw+github@weeksfamily.ca>
+
+=========
+Build: 1.14.2-26.0.51 - Sun Jun 23 00:43:36 GMT 2019
+	cpw:
+		Moved some events to the Mod's event bus. You'll need to update which
+		bus you're listening to for these. (The Mod event bus is the only one
+		actively dispatching events during model loading).
+		ModelRegistryEvent, ModelBakeEvent, TextureStitchEvent.Pre,
+		TextureStitchEvent.Post, ColourHandlerEvent.Block,
+		ColourHandlerEvent.Item
+		Signed-off-by: cpw <cpw+github@weeksfamily.ca>
+
+=========
+Build: 1.14.2-26.0.50 - Sat Jun 22 23:58:24 GMT 2019
+	cpw:
+		Fix StartupQuery, and put tests back.
+		Signed-off-by: cpw <cpw+github@weeksfamily.ca>
+
+=========
+Build: 1.14.2-26.0.49 - Sat Jun 22 23:10:09 GMT 2019
+	cpw:
+		Fix stupid bug introduced with the refactor..
+		Signed-off-by: cpw <cpw+github@weeksfamily.ca>
+
+=========
+Build: 1.14.2-26.0.48 - Sat Jun 22 16:53:05 GMT 2019
+	cpw:
+		Tidy up mod loading a bit more, and also crash if the [[mods]] list
+		isn't a list.
+		Signed-off-by: cpw <cpw+github@weeksfamily.ca>
+
+=========
+Build: 1.14.2-26.0.47 - Sat Jun 22 16:34:07 GMT 2019
+	cpw:
+		Update mappings, move mod initialization to the async loader.
+		Signed-off-by: cpw <cpw+github@weeksfamily.ca>
+
+	cpw:
+		Fix server side loading, tweak mods command.
+		Signed-off-by: cpw <cpw+github@weeksfamily.ca>
+
+=========
+Build: 1.14.2-26.0.43 - Sat Jun 22 03:35:29 GMT 2019
+	tterrag:
+		Fix ModelDataTest
+
+=========
+Build: 1.14.2-26.0.42 - Sat Jun 22 01:16:01 GMT 2019
+	tterrag:
+		Fix #5612 add entity to ISelectionContext
+
+=========
+Build: 1.14.2-26.0.41 - Sat Jun 22 00:29:32 GMT 2019
+	tterrag:
+		Fix #5768 add access to MainWindow object in RenderGameOverlayEvent
+
+=========
+Build: 1.14.2-26.0.40 - Sat Jun 22 00:23:47 GMT 2019
+	tterrag:
+		Fix #5810 incorrect cullface on some models
+
+=========
+Build: 1.14.2-26.0.39 - Fri Jun 21 23:48:06 GMT 2019
+	tterrag:
+		Fix bad patch breaking armor dyeing
+
+	tterrag:
+		Fix #5686 ArmorLayer still calls deprecated getArmorResource
+
+=========
+Build: 1.14.2-26.0.37 - Fri Jun 21 23:35:42 GMT 2019
+	tterrag:
+		Fix #5805 ModelBakeEvent does not fire
+
+	tterrag:
+		Make sure test mods load, fix BlockstateRetextureTest
+
+=========
+Build: 1.14.2-26.0.35 - Thu Jun 20 01:10:15 GMT 2019
+	lex:
+		Fix some compile errors in test classes.
+
+	lex:
+		Fix lighting not being sent to client when large amounts of blocks
+		change at once. Closes #5839 Remove RecipeType/VanillaRecipeTypes, as
+		1.14 has a vanilla system for this.
+
+=========
 Build: 1.14.2-26.0.33 - Mon Jun 17 21:08:30 GMT 2019
 	lex:
 		Fix Vanilla resources loading from classpath, instead of the extra jar.
