--- a/src/main/resources/assets/esotericacraft/lang/en_us.json
+++ b/src/main/resources/assets/esotericacraft/lang/en_us.json
@@ -1,6 +1,9 @@
 {
 	"item.esotericacraft.pogo_stick": "Pogo Stick",
 	"item.esotericacraft.runing_staff": "Runing Staff",
+	"item.esotericacraft.diamond_dust": "Diamond Dust",
+	"item.esotericacraft.garnet": "Garnet",
 	
-	"block.esotericacraft.stone_path_block": "Stone Path"
+	"block.esotericacraft.stone_path_block": "Stone Path",
+	"block.esotericacraft.auto_rune_caster_block": "Auto Rune Caster"
 }
