--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,233 @@
+Build: 1.14.4-28.1.96 - Mon Nov 25 06:49:59 GMT 2019
+	tterrag:
+		Fix EntityLootTables not calling addTables
+
+=========
+Build: 1.14.4-28.1.95 - Mon Nov 25 06:04:00 GMT 2019
+	tterrag:
+		Make EntityLootTables reusable for modders
+
+=========
+Build: 1.14.4-28.1.94 - Mon Nov 25 00:08:57 GMT 2019
+	6237881+nikita488:
+		Fix emissive items not working
+
+=========
+Build: 1.14.4-28.1.93 - Sat Nov 23 20:38:16 GMT 2019
+	cpw:
+		Fix the hang on startup problem when windows' broken device enumeration
+		causes a huge glfwInit slowdown. Log a message too when this is
+		detected.
+		See https://github.com/glfw/glfw/issues/1284,
+		https://stackoverflow.com/questions/10967795/directinput8-enumdevices-sometimes-painfully-slow, 
+		https://discourse.libsdl.org/t/win-10-initing-joystick-causes-45s-hang-in-sdl-dinput-joystickdetect/23293
+		Signed-off-by: cpw <cpw+github@weeksfamily.ca>
+
+=========
+Build: 1.14.4-28.1.92 - Thu Nov 21 03:23:20 GMT 2019
+	richard:
+		Add hooks to make it easier to add custom TNT blocks (#6290)
+
+=========
+Build: 1.14.4-28.1.91 - Thu Nov 21 03:15:24 GMT 2019
+	DaemonUmbra:
+		Add tags supports_beacon and supports_conduit and modify Beacon and
+		Conduit to use these tags (#6266)
+
+=========
+Build: 1.14.4-28.1.90 - Tue Nov 12 23:18:44 GMT 2019
+	richard:
+		Fix DyeColor referencing incorrect Tag path. Fixes #6301 (#6303)
+
+	bl4ckscor33:
+		Fix RawMouseEvent not being cancelable (#6310)
+
+=========
+Build: 1.14.4-28.1.88 - Tue Nov 12 23:11:05 GMT 2019
+	DaemonUmbra:
+		Modify StonecutterContainer to allow shift-click insertion of any block
+		with a valid recipe rather than limiting to blocks in an Immutable List
+		(#6268)
+
+=========
+Build: 1.14.4-28.1.87 - Thu Nov 07 21:58:24 GMT 2019
+	tterrag:
+		Fix #6305 lighting optimization using the wrong method
+
+=========
+Build: 1.14.4-28.1.86 - Thu Nov 07 15:44:04 GMT 2019
+	tterrag:
+		Add support for modded warm ocean biomes in bonemeal code
+
+=========
+Build: 1.14.4-28.1.85 - Tue Nov 05 19:56:19 GMT 2019
+	tterrag:
+		Optimize SectionLightStorage#cancelSectionUpdates loop
+
+	DaemonUmbra:
+		Made the slash optional in fml confirm/cancel. (#6282)
+
+	DaemonUmbra:
+		Fixed an NPE caused by missing registries. (#6292)
+		Missing registries in this case being registries renamed without proper
+		remapping or created by mods that were removed.
+
+	12281102+Aeltumn:
+		Add LeftClickEvent trigger to onPlayerDamageBlock (#6046)
+
+=========
+Build: 1.14.4-28.1.81 - Tue Nov 05 19:10:15 GMT 2019
+	lex:
+		Fix registry snapshots not reading aliases correctly. Closes #6298
+
+=========
+Build: 1.14.4-28.1.80 - Sun Nov 03 17:33:43 GMT 2019
+	cpw:
+		A few tweaks to things. Make the mods command a bit better, make the
+		IndexedMessageCodec actually log which network channel it got back
+		packets on. Also, improve the custom directorymodlocator with actual
+		custom names, finally, allow up to 99 log rollovers, up from 7 default
+		(this means a repeatedly crashing server is less likely to roll out the
+		log of the first crash).
+		Signed-off-by: cpw <cpw+github@weeksfamily.ca>
+
+=========
+Build: 1.14.4-28.1.79 - Fri Nov 01 21:10:27 GMT 2019
+	tterrag:
+		Fix BlockStateProvider#horizontalBlock emitting rotations >=360
+
+=========
+Build: 1.14.4-28.1.78 - Fri Nov 01 18:30:45 GMT 2019
+	suarezsandicamilo:
+		Added some more biome types to BiomeDictionary (#6250)
+
+=========
+Build: 1.14.4-28.1.77 - Fri Nov 01 18:24:10 GMT 2019
+	DaemonUmbra:
+		Replaced getTypes invocation in ensureHasTypes with a direct reference
+		to types, preventing infinite recursion (#6284)
+		The direct reference is checked via ternary and reports if the set is
+		empty, this is likely to result in log spam if modders don't assign
+		types to their biomes
+
+=========
+Build: 1.14.4-28.1.76 - Wed Oct 30 19:25:37 GMT 2019
+	tterrag:
+		Fix lang generator escaping newlines, add lang generator test
+
+=========
+Build: 1.14.4-28.1.75 - Wed Oct 30 19:01:45 GMT 2019
+	tterrag:
+		Escape control chars and unicode when writing out lang datagen
+
+=========
+Build: 1.14.4-28.1.74 - Tue Oct 29 01:23:23 GMT 2019
+	tterrag:
+		Allow LanguageProvider helpers to accept suppliers of subtypes
+
+=========
+Build: 1.14.4-28.1.73 - Mon Oct 28 23:29:06 GMT 2019
+	tterrag:
+		Expose private helper methods in BlockLootTables to subclasses
+
+=========
+Build: 1.14.4-28.1.72 - Mon Oct 28 21:13:22 GMT 2019
+	wynprice999:
+		Fixed vanilla bug in entity navigation to stop entities spinning
+		(MC-94054) (#6091)
+
+=========
+Build: 1.14.4-28.1.71 - Mon Oct 28 20:24:26 GMT 2019
+	dev:
+		Reimplement usage of Item#doesSneakBypassUse() (#6114)
+
+=========
+Build: 1.14.4-28.1.70 - Sat Oct 26 20:55:58 GMT 2019
+	cpw:
+		Handle logging during shutdown better on the server, by not closing the
+		logfile before the server itself has shutdown.
+		Signed-off-by: cpw <cpw+github@weeksfamily.ca>
+
+=========
+Build: 1.14.4-28.1.69 - Fri Oct 25 11:28:30 GMT 2019
+	cpw:
+		Fix NPE in modlauncher when there is no mods dir yet.
+		Signed-off-by: cpw <cpw+github@weeksfamily.ca>
+
+=========
+Build: 1.14.4-28.1.68 - Fri Oct 25 06:09:04 GMT 2019
+	DaemonUmbra:
+		Fixed NPEs caused by uninitialized lists in ModDirTransformerDiscoverer
+		(#6277)
+
+=========
+Build: 1.14.4-28.1.67 - Fri Oct 25 05:09:35 GMT 2019
+	lex:
+		Make Loot Table data generators more reusable for modders.
+
+=========
+Build: 1.14.4-28.1.66 - Fri Oct 25 02:33:36 GMT 2019
+	tterrag:
+		Add Blockstate and Model data providers (#6241)
+
+=========
+Build: 1.14.4-28.1.65 - Thu Oct 24 01:49:17 GMT 2019
+	cpw:
+		Allow pack locators to load from the mods folder.
+		Regular mods are now automatically de-duped based on the version number
+		- the highest version file of a "root mod id" is now selected
+		automatically.
+		Signed-off-by: cpw <cpw+github@weeksfamily.ca>
+
+=========
+Build: 1.14.4-28.1.64 - Tue Oct 22 22:31:43 GMT 2019
+	wynprice999:
+		Fixed forge rendering pipeline and shape based light occulsion. (#6178)
+
+	559819+AfterRebelion:
+		Exclude Cobblestone slabs and wall recipes (#6230)
+
+=========
+Build: 1.14.4-28.1.62 - Tue Oct 22 19:08:15 GMT 2019
+	wynprice999:
+		Fix shouldCauseReequipAnimation not affecting anything (#6256)
+
+=========
+Build: 1.14.4-28.1.61 - Fri Oct 18 13:33:03 GMT 2019
+	cpw:
+		Expose the registrationchange event to simple channel (not that anyone
+		should care, but who knows?)
+		Also, Context.getNetworkManager should have been public. Derp.
+		Signed-off-by: cpw <cpw+github@weeksfamily.ca>
+
+=========
+Build: 1.14.4-28.1.60 - Fri Oct 18 04:03:38 GMT 2019
+	cpw:
+		Fix clientside chunk load event spam. Was an offset patch.. Also fire
+		unload on the client side too.
+		Signed-off-by: cpw <cpw+github@weeksfamily.ca>
+
+=========
+Build: 1.14.4-28.1.59 - Fri Oct 18 00:28:54 GMT 2019
+	cpw:
+		Add in an event to expose the standard MC channel stuff to network event
+		channels that care about such things. Mods using simplechannel don't
+		need to care.
+		Also, put a sync wrapper around crashreportextender, so it doesn't die
+		sometimes randomly during startup.
+		Signed-off-by: cpw <cpw+github@weeksfamily.ca>
+
+=========
+Build: 1.14.4-28.1.58 - Thu Oct 17 23:13:24 GMT 2019
+	David Quintana:
+		Fix vanilla models with parents not loading properly from forge
+		blockstates.
+
+	12281102+Aeltumn:
+		Fix #6244 RightClickBlock#getUseBlock and #getUseItem being ignored
+		(#6246)
+
+=========
 Build: 1.14.4-28.1.56 - Tue Oct 15 22:01:50 GMT 2019
 	bl4ckscor33:
 		Fix shear sound not playing (#6202)
@@ -524,7 +754,7 @@ Build: 1.14.4-28.0.74 - Thu Aug 29 19:09:49 GMT 2019
 
 =========
 Build: 1.14.4-28.0.73 - Thu Aug 29 04:34:22 GMT 2019
-	daemon.umbra:
+	DaemonUmbra:
 		Change fml.modloading.brokenfile.optifine to not imply that Forge is
 		responsible for Forge-Optifine compatibility. (#6080)
 
@@ -687,7 +917,7 @@ Build: 1.14.4-28.0.41 - Mon Aug 05 01:19:19 GMT 2019
 
 =========
 Build: 1.14.4-28.0.40 - Sat Aug 03 01:48:54 GMT 2019
-	daemon.umbra:
+	DaemonUmbra:
 		Fix a crash I caused by misunderstanding formatToString (#6007)
 
 =========
@@ -718,7 +948,7 @@ Build: 1.14.4-28.0.34 - Fri Aug 02 20:50:19 GMT 2019
 	mh:
 		Fixed PlayerInteractEvents not working (#5976)
 
-	daemon.umbra:
+	DaemonUmbra:
 		Change ModLoadingException to display ModID instead of ModInfo instance
 		identifier. (#5999)
 
@@ -1078,7 +1308,7 @@ Build: 1.14.3-27.0.31 - Tue Jul 09 02:43:35 GMT 2019
 
 =========
 Build: 1.14.3-27.0.30 - Mon Jul 08 22:59:04 GMT 2019
-	daemon.umbra:
+	DaemonUmbra:
 		Disable Config Button when no mods are selected (#5905)
 		Closes #5889
 
@@ -1088,7 +1318,7 @@ Build: 1.14.3-27.0.29 - Mon Jul 08 22:53:13 GMT 2019
 		Fix link applying to whole component in chat if component starts with
 		link (#5909)
 
-	daemon.umbra:
+	DaemonUmbra:
 		Fixed #5895: Shearing via Displenser drops Shears (#5906)
 
 	tedstar.dev:
